Sistemato lista punteggi Sistemato traduzioni in italiano. Messo nuovi bat utili. Messo modo per modificare versione senza trasferire l'exe e garantire una release più leggera. Abilitato popup del "classifica dei popoli" in multiplayer. Messo divisione tra meraviglie e meraviglie nazionali. Messo a posto codici.

--- a/Altro/Todo
+++ b/Altro/Todo
@@ -1,3 +1,5 @@
 Vedere se panello punteggi è fixato.
 Vedere se si riesce a riesumare il popup.
 Cambiare alcuni testi con roba più divertente.
+
+Settare MaxPlayerInstances in un menu a parte in buildings
