--- a/Altro/Todo
+++ b/Altro/Todo
@@ -1,5 +1,9 @@
-Vedere se panello punteggi è fixato.
 Vedere se si riesce a riesumare il popup.
-Cambiare alcuni testi con roba più divertente.
 
-Settare MaxPlayerInstances in un menu a parte in buildings
+modificare tag " Infelicità ha raggiunto 10 e l'impero è in fermento! Potrebbero
+verificarsi delle insurrezioni, con la comparsa di unità ribelli (barbari) nel tuo
+territorio. Questo awerrà ogni alcuni turni, finché non avrai posto rimedio a
+questa situazione!" con 15
+Sacheggiare anche le tue cose.
+
+Laboratorio di ricerca: +50% -> +25% +4 scienza -> +8 scienza slot scienzato 2
