Fix minori, miglioramento bat.

--- a/Altro/Todo
+++ b/Altro/Todo
@@ -7,3 +7,4 @@ questa situazione!" con 15
 Sacheggiare anche le tue cose.
 
 Laboratorio di ricerca: +50% -> +25% +4 scienza -> +8 scienza slot scienzato 2
+aumentare di 1 la resa delle strutture fatte dai grandi personaggi.
